# SwiftPredict

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  cli.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
Backend/: requirements.txt
Backend/app/: test.py
Backend/app/api/: logging.py
Backend/app/core/: config.py
Client/: swift_predict.py
backend/: test.py
backend/app/: __init__.py
backend/app/api/: APIs.py  automl_apis.py  logger_apis.py
backend/app/client/: swift_predict.py
backend/app/core/: config.py
backend/app/models/: models.pkl
backend/app/services/: automl_test.py  automl_trainer.py  models.pkl  preprocessing.py  train.csv
backend/app/swiftpredict.egg-info/: PKG-INFO  SOURCES.txt
backend/client/: swift_predict.py
backend/main_app/api/: APIs.py
backend/main_app/core/: config.py
frontend/: package.json
frontend/app/: SwiftPredictUI.js  page.js
swiftpredict/: __init__.py  cli.py  index.html
swiftpredict.egg-info/: PKG-INFO
swiftpredict_v2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
